--- a/index.html
+++ b/index.html
@@ -12,55 +12,9 @@
 <body>
 
   <div class="container">
-
-
-
-
-
-
-    <form class="my-form" action="">
-      <div class="form-container">
-
-        <div class="form-left">
-
-          <img src="images/Ryu-SF2-Victory-Pose (1).gif" alt="">
-          <input type="text" id="player1" name="player1">
-          <label for="player1">Player 1</label>
-
-        </div>
-
-
-        <div class="form-right">
-          <img src="images/Ken-SF2-Victory-Pose.gif" alt="">
-          <input type="text" id="player2" name="player2">
-          <label for="player2"> Player 2</label>
-
-        </div>
-
-
-
-      </div>
-
-      <div class="submit-container">
-         <button type="submit"> PLAY</button>
-
-      </div>
-
-     
-    </form>
-
-
-
-
-
-
-
-
   </div>
-
-
-
-
 </body>
 
 </html>
+
+<img src="" alt="">
