--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>My test page</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Permanent+Marker" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+
   <script src="index.js" defer></script>
 </head>
 
@@ -16,5 +18,3 @@
 </body>
 
 </html>
-
-<img src="" alt="">
